# google_shopping_ean_parser_rust

./: Cargo.toml
src/: main.rs
