[package]
name = "google_shopping_ean_parser_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
rust_decimal = "1.29.1"
select = "0.6.0"

